--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   
   
   
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/iosd-events" # the subpath of your site, e.g. /blog
 url: "http://iosd.tech" # the base hostname & protocol for your site
 
 #sidebar
